chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -503,11 +503,10 @@ com_crashlytics_export_strings.xml
 crashlytics-build.properties
 crashlytics.properties
 fabric.properties
-build/
+**/build/**
 out/
 
 # Miscellaneous
 .idea/
 *.snalyzerinfo
-dedicated/*.manifest
 stringpy.rc
